[package]
name = "my-highlights"
version = "0.1.0"
authors = ["Allister SANCHEZ <allister.sanchez@amadeus.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
indexmap = { version = "2.9.0", features = ["std", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
